--- a/projeto/package.json
+++ b/projeto/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "./src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "node --watch . "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
-    "prisma": "^4.9.0"
+    "prisma": "^4.11.0"
   }
 }
