--- a/projeto/package.json
+++ b/projeto/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.11.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.7",
     "prisma": "^4.11.0"
   }
 }
